--- a/index.html
+++ b/index.html
@@ -1,61 +1,211 @@
 <!DOCTYPE html>
-<html>
+<html lang="th">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Smart Plant Dashboard</title>
+    <title>Cyber Smart Farm v2.0</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
-        body { font-family: sans-serif; background: #eceff1; display: flex; justify-content: center; padding: 20px; }
-        .box { background: white; padding: 25px; border-radius: 15px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); width: 100%; max-width: 350px; text-align: center; }
-        .data-val { font-size: 24px; font-weight: bold; color: #1565c0; }
-        .status { margin: 15px 0; padding: 10px; border-radius: 8px; font-weight: bold; }
-        .on { background: #ffebee; color: #c62828; }
-        .off { background: #e8f5e9; color: #2e7d32; }
-        button { width: 100%; padding: 12px; border: none; border-radius: 8px; color: white; font-weight: bold; cursor: pointer; }
-        .btn-red { background: #f44336; }
-        .btn-green { background: #4caf50; }
-        .uptime { font-size: 12px; color: #78909c; margin-top: 10px; }
+        :root {
+            --bg: #0b0e14;
+            --card: #151921;
+            --accent: #00d4ff;
+            --danger: #ff4b5c;
+            --success: #05ffa1;
+            --text: #e0e6ed;
+        }
+
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: var(--bg);
+            color: var(--text);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            margin: 0;
+            overflow: hidden;
+        }
+
+        .container {
+            width: 90%;
+            max-width: 450px;
+            background: var(--card);
+            border-radius: 30px;
+            padding: 40px;
+            box-shadow: 0 0 50px rgba(0, 212, 255, 0.1);
+            border: 1px solid rgba(255, 255, 255, 0.05);
+            text-align: center;
+            position: relative;
+        }
+
+        .container::before {
+            content: "";
+            position: absolute;
+            top: -2px; left: -2px; right: -2px; bottom: -2px;
+            background: linear-gradient(45deg, var(--accent), transparent, var(--danger));
+            z-index: -1;
+            border-radius: 32px;
+            opacity: 0.3;
+        }
+
+        h1 {
+            font-size: 1.5rem;
+            letter-spacing: 3px;
+            margin-bottom: 30px;
+            color: var(--accent);
+            text-transform: uppercase;
+        }
+
+        .status-badge {
+            display: inline-block;
+            padding: 8px 20px;
+            border-radius: 50px;
+            font-size: 0.8rem;
+            font-weight: bold;
+            margin-bottom: 30px;
+            border: 1px solid currentColor;
+        }
+
+        .status-ok { color: var(--success); background: rgba(5, 255, 161, 0.1); }
+        .status-alert { color: var(--danger); background: rgba(255, 75, 92, 0.1); animation: blink 1s infinite; }
+
+        @keyframes blink { 50% { opacity: 0.5; } }
+
+        .stats-grid {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 20px;
+            margin-bottom: 30px;
+        }
+
+        .stat-card {
+            background: rgba(255, 255, 255, 0.03);
+            padding: 20px;
+            border-radius: 20px;
+            border: 1px solid rgba(255, 255, 255, 0.05);
+        }
+
+        .stat-card i { font-size: 1.5rem; margin-bottom: 10px; color: var(--accent); }
+        .stat-label { font-size: 0.7rem; color: #888; text-transform: uppercase; display: block; }
+        .stat-value { font-size: 1.8rem; font-weight: bold; margin-top: 5px; }
+
+        .control-section {
+            margin-top: 20px;
+            padding-top: 20px;
+            border-top: 1px solid rgba(255, 255, 255, 0.1);
+        }
+
+        .btn-cyber {
+            width: 100%;
+            padding: 18px;
+            border: none;
+            border-radius: 15px;
+            font-size: 1rem;
+            font-weight: bold;
+            cursor: pointer;
+            transition: 0.3s;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 10px;
+        }
+
+        .btn-on { background: var(--danger); color: white; box-shadow: 0 0 20px rgba(255, 75, 92, 0.4); }
+        .btn-off { background: var(--success); color: #0b0e14; box-shadow: 0 0 20px rgba(5, 255, 161, 0.4); }
+
+        .uptime-text {
+            margin-top: 25px;
+            font-size: 0.75rem;
+            color: #555;
+            font-family: monospace;
+        }
     </style>
 </head>
 <body>
-    <div class="box">
-        <h2>🌱 Plant Monitor</h2>
-        <p>อุณหภูมิ: <span class="data-val" id="temp">--</span> °C</p>
-        <p>ความชื้นดิน: <span class="data-val" id="soil">--</span> %</p>
-        <div id="statusBox" class="status off">สถานะปกติ</div>
-        <button id="btn" class="btn-green" onclick="toggle()">เปิดเสียงไซเรน</button>
-        <div class="uptime">อัปเดตล่าสุด: <span id="time">--</span></div>
+
+<div class="container">
+    <h1><i class="fas fa-microchip"></i> Core System</h1>
+    
+    <div id="alarmStatus" class="status-badge status-ok">
+        <i class="fas fa-check-circle"></i> SYSTEM NORMAL
     </div>
 
-    <script>
-        const config = { apiKey: "AIzaSyD3V-qYNxPh-jU8A5cEMGo4RH0fJOWa4C4", databaseURL: "https://kjszz-1a818-default-rtdb.firebaseio.com" };
-        firebase.initializeApp(config);
-        const db = firebase.database();
-        let webStatus = false;
+    <div class="stats-grid">
+        <div class="stat-card">
+            <i class="fas fa-temperature-high"></i>
+            <span class="stat-label">Temperature</span>
+            <div class="stat-value"><span id="temp">--</span>°C</div>
+        </div>
+        <div class="stat-card">
+            <i class="fas fa-tint"></i>
+            <span class="stat-label">Soil Moisture</span>
+            <div class="stat-value"><span id="soil">--</span>%</div>
+        </div>
+    </div>
 
-        // ดึงข้อมูล Real-time
-        db.ref('sensor').on('value', (s) => {
-            const val = s.val();
-            document.getElementById('temp').innerText = val.temperature;
-            document.getElementById('soil').innerText = val.soil;
-            document.getElementById('time').innerText = val.last_update;
-            
-            const sBox = document.getElementById('statusBox');
-            if(val.alarm) { sBox.innerText = "🚨 ตรวจพบความผิดปกติ!"; sBox.className = "status on"; }
-            else { sBox.innerText = "✅ สถานะปกติ"; sBox.className = "status off"; }
-        });
+    <div class="control-section">
+        <button id="btnControl" class="btn-cyber btn-off" onclick="toggleAlarm()">
+            <i class="fas fa-volume-up"></i> Manual Siren
+        </button>
+    </div>
 
-        // ดึงสถานะปุ่ม
-        db.ref('control/alarm').on('value', (s) => {
-            webStatus = s.val();
-            const b = document.getElementById('btn');
-            b.innerText = webStatus ? "ปิดเสียงไซเรน" : "เปิดเสียงไซเรน";
-            b.className = webStatus ? "btn-red" : "btn-green";
-        });
+    <div class="uptime-text">
+        LAST SYNC: <span id="uptime">--</span>
+    </div>
+</div>
 
-        function toggle() { db.ref('control/alarm').set(!webStatus); }
-    </script>
+<script>
+    // การตั้งค่า Firebase ของคุณ
+    const firebaseConfig = {
+        apiKey: "AIzaSyD3V-qYNxPh-jU8A5cEMGo4RH0fJOWa4C4",
+        databaseURL: "https://kjszz-1a818-default-rtdb.firebaseio.com"
+    };
+
+    firebase.initializeApp(firebaseConfig);
+    const database = firebase.database();
+    let currentAlarmState = false;
+
+    // ดึงข้อมูล Real-time
+    database.ref('sensor').on('value', (snapshot) => {
+        const data = snapshot.val();
+        if (data) {
+            document.getElementById('temp').innerText = data.temperature;
+            document.getElementById('soil').innerText = data.soil;
+            document.getElementById('uptime').innerText = data.last_update;
+
+            const alarmBadge = document.getElementById('alarmStatus');
+            if (data.alarm) {
+                alarmBadge.innerHTML = '<i class="fas fa-exclamation-triangle"></i> ALERT ACTIVE';
+                alarmBadge.className = 'status-badge status-alert';
+            } else {
+                alarmBadge.innerHTML = '<i class="fas fa-check-circle"></i> SYSTEM NORMAL';
+                alarmBadge.className = 'status-badge status-ok';
+            }
+        }
+    });
+
+    // ดึงสถานะปุ่มกด
+    database.ref('control/alarm').on('value', (snapshot) => {
+        currentAlarmState = snapshot.val();
+        const btn = document.getElementById('btnControl');
+        if (currentAlarmState) {
+            btn.innerHTML = '<i class="fas fa-volume-mute"></i> Mute Siren';
+            btn.className = 'btn-cyber btn-on';
+        } else {
+            btn.innerHTML = '<i class="fas fa-volume-up"></i> Manual Siren';
+            btn.className = 'btn-cyber btn-off';
+        }
+    });
+
+    function toggleAlarm() {
+        database.ref('control/alarm').set(!currentAlarmState);
+    }
+</script>
+
 </body>
 </html>
